--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body, input, select, textarea {
 
 body::before {
     content: '';
-    width: 100vh;
+    width: 100%;
     height: 368px;
     background: #121214;
     position: absolute;
